--- a/crudPage.html
+++ b/crudPage.html
@@ -4,6 +4,9 @@
 
     </head>
     <body>
+        <p style="color:red">
+            if you select update operation the password field supposed to be the user's new password.
+        </p>
         <form action="/crud-page/crud/" method="post">
             <label for="Username">
                 Username
