--- a/crudPage.html
+++ b/crudPage.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p style="color:red">
-            if you select update operation the password field supposed to be the user's new password.
+            if you select update operation so the password field is supposed to be the user's new password.
         </p>
         <form action="/crud-page/crud/" method="post">
             <label for="Username">
