--- a/crudPage.html
+++ b/crudPage.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-        <h3 style="color:red">just use password field for update and create  operartion.otherwise leave it empty. With Love Ehsan</h3>
+        <h3 style="color:red">just use password field for update and create  operartion.otherwise leave it empty.</h3>
         <form action="/crud-page/crud/" method="post">
             <label for="Username">
                 Username
